Angular skeleton and routing

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -12,19 +12,19 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav justify-content-start flex-grow-1 pe-1">
         <li class="nav-item p-1">
-          <button class="btn btn-nav fw-bold">Ranking</button>
+          <button class="btn btn-nav fw-bold" routerLink="/ranking" routerLinkActive="active">Ranking</button>
         </li>
         <li class="nav-item p-1">
-          <button class="btn btn-nav fw-bold">Broadcast list</button>
+          <button class="btn btn-nav fw-bold" routerLink="/broadcast-list" routerLinkActive="active">Broadcast list</button>
         </li>
       </ul>
       <hr class="offcanvas-header p-0 my-2">
       <ul class="navbar-nav justify-content-end flex-grow-1 pe-1">
         <li class="nav-item p-1">
-          <button class="btn btn-sign fw-bold">Sign in<i class="ms-1 fa fa-sign-in"></i></button>
+          <button class="btn btn-nav fw-bold" routerLink="/sign-in" routerLinkActive="active">Sign in<i class="ms-1 fa fa-sign-in"></i></button>
         </li>
         <li class="nav-item p-1">
-          <button class="btn btn-sign fw-bold">Sign up<i class="ms-1 fa fa-user-plus"></i></button>
+          <button class="btn btn-nav fw-bold" routerLink="/sign-up" routerLinkActive="active">Sign up<i class="ms-1 fa fa-user-plus"></i></button>
         </li>
       </ul>
     </div>
