--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<div class="container mt-2">
-  <h1>Hello client</h1>
+<div class="container mt-5">
+  <router-outlet></router-outlet>
 </div>
