Switching to cookies authentication and persisting login

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -36,7 +36,7 @@
           <p class="py-auto my-auto">{{user.email}}</p>
         </li>
         <li class="nav-item p-1">
-          <button (click)="accountService.logout()" class="btn btn-nav fw-bold">Sign out<i
+          <button (click)="logout()" class="btn btn-nav fw-bold">Sign out<i
             class="ms-1 fa fa-sign-out"></i></button>
         </li>
       </ul>
