--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -12,10 +12,17 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav justify-content-start flex-grow-1 pe-1">
         <li class="nav-item p-1">
-          <button class="btn btn-nav fw-bold" routerLink="/ranking" routerLinkActive="active">Ranking</button>
+          <button [disabled]="(accountService.currentUser$ | async) === null" class="btn btn-nav fw-bold"
+                  routerLink="/ranking" routerLinkActive="active">Ranking
+          </button>
         </li>
         <li class="nav-item p-1">
-          <button class="btn btn-nav fw-bold" routerLink="/broadcast-list" routerLinkActive="active">Broadcast list
+          <button [disabled]="(accountService.currentUser$ | async) === null" class="btn btn-nav fw-bold"
+                  routerLink="/broadcast-list" routerLinkActive="active">Broadcast list
+          </button>
+        </li>
+        <li *isInRole="'Admin'" class="nav-item p-1">
+          <button class="btn btn-nav fw-bold" routerLink="/users" routerLinkActive="active">Users
           </button>
         </li>
       </ul>
