--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -22,8 +22,7 @@
           </button>
         </li>
         <li *isInRole="'Admin'" class="nav-item p-1">
-          <button class="btn btn-nav fw-bold" routerLink="/users" routerLinkActive="active">Users
-          </button>
+          <button class="btn btn-nav fw-bold" routerLink="/users" routerLinkActive="active">Users</button>
         </li>
       </ul>
       <hr class="offcanvas-header p-0 my-2">
