--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<ngx-spinner type="line-scale"></ngx-spinner>
 <div class="container my-5">
   <router-outlet></router-outlet>
 </div>
