--- a/client/src/app/ranking/ranking.component.html
+++ b/client/src/app/ranking/ranking.component.html
@@ -3,8 +3,8 @@
     <div class="row no-gutters">
       <div class="col-12">
         <div class="card-body">
-          <h5 class="card-title fw-bold">{{i + 1}}. {{piece.title}} - {{piece.artist}}</h5><h5
-          class="text-muted">{{piece.version}}</h5>
+          <h5 class="card-title fw-bold">{{i + 1}}. {{piece.title}} - {{piece.artist}}</h5>
+          <h5 class="text-muted">{{piece.version}}</h5>
           <p class="card-text">{{piece.views | numberSuffix}} views</p>
           <p class="card-text"><small class="text-muted">Duration: {{piece.duration | duration}}</small></p>
         </div>
