Piece details page, server side caching, search bar and pagination

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="px-2 navbar navbar-expand-md shadow">
+<div class="px-2 navbar navbar-expand-md shadow sticky-top bg-white">
   <button class="navbar-toggler btn" data-bs-target="#offcanvasNavbar" data-bs-toggle="offcanvas">
     <i class="open fa fa-bars fa-2x"></i>
   </button>
