--- a/client/src/app/broadcast-list/broadcast-list.component.html
+++ b/client/src/app/broadcast-list/broadcast-list.component.html
@@ -1,11 +1,59 @@
-<ng-container *ngFor="let item of programmeItems;">
-  <div class="card mb-3" routerLink="/broadcast-list/{{item.piece.id}}">
-    <div class="row no-gutters">
+<div *ngIf="programmeItemsResult" class="container">
+  <div class="mb-2 d-flex justify-content-start">
+    <div class="input-group">
+      <input (keyup.enter)="search()" [(ngModel)]="searchContent" class="form-control shadow-none"
+             placeholder="e.g. Another Day In The Paradise" type="text">
+      <button (click)="search()" class="btn dropdown-button fw-bold" type="submit">Search</button>
+    </div>
+  </div>
+
+  <div class="mb-3 d-flex justify-content-start">
+    <div class="btn-group col-md-2 p-0" dropdown>
+      <button aria-controls="dropdown-animated" class="fw-bold btn dropdown-button btn-primary dropdown-toggle"
+              dropdownToggle
+              id='dropdown-button'
+              type="button">
+        <p class="d-inline">{{programmeItemsService.currentSortingOption.name}}</p>
+        <span class="ms-2 caret"></span>
+      </button>
+      <ul *dropdownMenu aria-labelledby="button-animated" class="dropdown-menu dropdown-menu-left"
+          id="dropdown-animated"
+          role="menu">
+        <li (click)="onSortSelected(option)"
+            *ngFor="let option of sortingOptions"
+            [value]="option.value"
+            class="menuitem">
+          <a class="dropdown-item">{{option.name}}</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <ng-container *ngFor="let item of programmeItemsResult.items;">
+    <div class="card mb-3" routerLink="/broadcast-list/{{item.piece.id}}">
       <div class="col-12">
         <div class="card-body">
-          <h5 class="card-title fw-bold">{{item.piece.title}}</h5>
+          <h5 class="card-title fw-bold">{{item.piece.title}} - {{item.piece.artist}}</h5>
+          <h6 class="card-title fw-bold">{{item.radioChannel.name}}</h6>
+          <p class="card-text mb-0"><small class="text-muted">{{item.views | numberSuffix}} views
+            on {{item.playbackDate | date:'medium':'+0'}}</small></p>
+          <p class="card-text mb-0"><small class="text-muted">{{item.broadcastingDuration | duration}}</small></p>
         </div>
       </div>
     </div>
-  </div>
-</ng-container>
+  </ng-container>
+
+  <pagination
+    (pageChanged)="onPageChanged($event)"
+    [(ngModel)]="params.page"
+    [boundaryLinks]="true"
+    [itemsPerPage]="params.pageSize"
+    [maxSize]="10"
+    [totalItems]="programmeItemsResult.totalItemsCount"
+    class="pager d-flex justify-content-center p-0 m-0"
+    firstText="&laquo;"
+    lastText="&raquo;"
+    nextText="&rsaquo;"
+    previousText="&lsaquo;">
+  </pagination>
+</div>
