--- a/client/src/app/broadcast-list/broadcast-list.component.scss
+++ b/client/src/app/broadcast-list/broadcast-list.component.scss
@@ -11,3 +11,41 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
   }
 }
+
+.dropdown-item:hover {
+  cursor: pointer;
+}
+
+.dropdown-button, .dropdown-button:focus {
+  padding: 5px 15px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  color: rgba(38, 56, 80, 255);
+  background: transparent;
+
+  &:hover, &.active {
+    background-color: whitesmoke;
+  }
+}
+
+::ng-deep .pagination {
+  --bs-pagination-active-color: rgba(38, 56, 80, 255);
+  --bs-pagination-active-border-color: #dee2e6;
+  --bs-pagination-active-bg: #e9ecef;
+  --bs-pagination-bg: white;
+}
+
+::ng-deep .page-link, ::ng-deep .page-link:hover, ::ng-deep .page-link:focus {
+  color: rgba(38, 56, 80, 255);
+}
+
+input[type="text"], textarea {
+  outline: none;
+  box-shadow: none !important;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+
+  &:focus {
+    border: 1px solid #ced4da;
+  }
+}
