--- a/client/src/app/sign-in/sign-in.component.html
+++ b/client/src/app/sign-in/sign-in.component.html
@@ -1,13 +1,15 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-lg-3 col-md-4">
-    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-      <app-user-form [form]="loginForm"></app-user-form>
-      <div class="d-grid my-0">
-        <p class="my-0 text-muted small">Don't have an account? <a routerLink="/sign-up">Register now</a></p>
-      </div>
-      <div class="d-grid">
-        <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
-      </div>
-    </form>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-lg-3 col-md-4">
+      <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+        <app-user-form [form]="loginForm"></app-user-form>
+        <div class="d-grid my-0">
+          <p class="my-0 text-muted small">Don't have an account? <a routerLink="/sign-up">Register now</a></p>
+        </div>
+        <div class="d-grid">
+          <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
