--- a/client/src/app/sign-up/sign-up.component.html
+++ b/client/src/app/sign-up/sign-up.component.html
@@ -1,14 +1,16 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-lg-3 col-md-4">
-    <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
-      <app-user-form [form]="registerForm"></app-user-form>
-      <div *ngIf="registerAsAdmin" class="d-grid">
-        <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Register new user
-        </button>
-      </div>
-      <div *ngIf="!registerAsAdmin" class="d-grid">
-        <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign up</button>
-      </div>
-    </form>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-lg-3 col-md-4">
+      <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
+        <app-user-form [form]="registerForm"></app-user-form>
+        <div *ngIf="registerAsAdmin" class="d-grid">
+          <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Register new user
+          </button>
+        </div>
+        <div *ngIf="!registerAsAdmin" class="d-grid">
+          <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign up</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
