--- a/client/src/app/update-user/update-user.component.html
+++ b/client/src/app/update-user/update-user.component.html
@@ -1,10 +1,12 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-lg-3 col-md-4">
-    <form (ngSubmit)="onSubmit()" [formGroup]="updateForm">
-      <app-user-form [form]="updateForm"></app-user-form>
-      <div class="d-grid">
-        <button [disabled]="updateForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Update user</button>
-      </div>
-    </form>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-lg-3 col-md-4">
+      <form (ngSubmit)="onSubmit()" [formGroup]="updateForm">
+        <app-user-form [form]="updateForm"></app-user-form>
+        <div class="d-grid">
+          <button [disabled]="updateForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Update user</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
