--- a/client/src/app/email-confirmed/email-confirmed.component.html
+++ b/client/src/app/email-confirmed/email-confirmed.component.html
@@ -1,2 +1,4 @@
-<h2>Welcome onboard! Your email has been successfully confirmed</h2>
-<p>Now you are able to <a routerLink="/sign-in">sign in</a></p>
+<div class="container">
+  <h2>Welcome onboard! Your email has been successfully confirmed</h2>
+  <p>Now you are able to <a routerLink="/sign-in">sign in</a></p>
+</div>
